finished up textual view